web input check

--- a/server/views/index.html
+++ b/server/views/index.html
@@ -74,6 +74,8 @@
                             $('#content').html(rendered);
                         }
                     });
+                } else {
+                    alert('please input date');
                 }
             });
         });
